# practica_15_micro

./: CMakeLists.txt  README.md  btstack_config.h  client.c  picow_ble_temp_reader.uf2  picow_ble_temp_sensor.uf2  server_common.c  server_common.h
